# video-catalog-admin-python

./: .gitignore  Dockerfile  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.docker/zsh/powerlevel10k/: .p10k.zsh
src/__shared/application/: use_cases.py
src/__shared/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__shared/infra/: repositories.py
src/__shared/tests/integration/domain/: test_integration_validators.py
src/__shared/tests/unit/application/: test_unit_use_cases.py
src/__shared/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  test_unit_value_objects.py
src/__shared/tests/unit/infra/: test_unit_repositories.py
src/category/application/: dto.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_integration_entities.py
src/category/tests/unit/application/: test_unit_dto.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
